--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
           <a href="index.html" class="text-gray-600 hover:text-black">Home</a>
           <a href="dashboard.html" class="text-gray-600 hover:text-black">Dashboard</a>
           <a href="#" class="text-gray-600 hover:text-black">Support</a>
-          <a href="register.html" class="text-blue-600 font-semibold hover:underline">Register</a>
           <a href="login.html" class="text-blue-600 font-semibold hover:underline">Login</a>
         </nav>
       </div>
@@ -25,7 +24,7 @@
     <section class="text-center py-16 bg-white shadow-inner">
       <h2 class="text-4xl font-bold text-gray-800 mb-4">Create & Manage Your Digital Menu</h2>
       <p class="text-lg text-gray-600 mb-6">Upload images, videos, and manage your items effortlessly.</p>
-      <a href="register.html">
+      <a href="pricing.html">
         <button class="px-6 py-3 bg-black text-white rounded-full hover:bg-gray-800">
           Get Started
         </button>
