--- a/pricing.html
+++ b/pricing.html
@@ -33,7 +33,7 @@
             <li>❌ No Custom Branding</li>
           </ul>
           <div class="text-3xl font-bold mb-4">₹0/month</div>
-          <a href="#" class="inline-block bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700">Get Started</a>
+          <a href="register.html" class="inline-block bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700">Get Started</a>
         </div>
 
         <!-- Standard Plan -->
@@ -49,7 +49,7 @@
             <li>❌ Custom Branding</li>
           </ul>
           <div class="text-3xl font-bold mb-4">₹999/month</div>
-          <a href="#" class="inline-block bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700">Start Standard</a>
+          <a href="register.html" class="inline-block bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700">Start Standard</a>
         </div>
 
         <!-- Premium Plan -->
@@ -65,7 +65,7 @@
             <li>✅ Analytics Dashboard</li>
           </ul>
           <div class="text-3xl font-bold mb-4">₹1,999/month</div>
-          <a href="#" class="inline-block bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700">Go Premium</a>
+          <a href="register.html" class="inline-block bg-blue-600 text-white px-5 py-2 rounded hover:bg-blue-700">Go Premium</a>
         </div>
 
       </div>
