--- a/pricing.html
+++ b/pricing.html
@@ -9,7 +9,7 @@
   <body class="bg-gray-50 text-gray-800">
 
     <header class="bg-white shadow p-5 flex justify-between items-center">
-      <h1 class="text-2xl font-bold">Hashtag</h1>
+      <h1 class="text-2xl font-bold">#Hashtag</h1>
       <nav class="space-x-4">
         <a href="index.html" class="text-blue-600 hover:underline">Home</a>
         <a href="dashboard.html" class="text-blue-600 hover:underline">Dashboard</a>
