--- a/dashboard.html
+++ b/dashboard.html
@@ -1,54 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Hashtag Dashboard</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body class="bg-gray-100">
-    <!-- Dashboard Header -->
-    <header class="bg-white shadow p-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-blue-600">Hashtag Dashboard</h1>
-      <button onclick="logout()" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Logout</button>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Hashtag Dashboard</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-100">
 
-    <!-- Conditionally Rendered Sidebar Menu -->
-    <div id="dashboardMenu" class="hidden md:flex w-64 h-screen bg-white shadow-lg p-4 flex-col">
+  <!-- Header -->
+  <header class="bg-white shadow p-4 flex justify-between items-center">
+    <h1 class="text-2xl font-bold text-blue-600">Hashtag Dashboard</h1>
+    <button onclick="logout()" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Logout</button>
+  </header>
+
+  <!-- Layout Container -->
+  <div class="flex min-h-screen">
+    
+    <!-- Sidebar (conditionally rendered) -->
+    <aside id="dashboardMenu" class="hidden md:flex w-64 bg-white shadow-lg p-4 flex-col">
       <a href="dashboard.html" class="mb-2 text-lg font-semibold text-gray-700 hover:text-blue-600">Home</a>
       <a href="profile.html" class="mb-2 text-lg font-semibold text-gray-700 hover:text-blue-600">Profile</a>
       <a href="settings.html" class="mb-2 text-lg font-semibold text-gray-700 hover:text-blue-600">Settings</a>
+      <a href="menu-management.html" class="mb-2 text-lg font-semibold text-gray-700 hover:text-blue-600">Menu Management</a>
       <a href="admin.html" id="adminLink" class="mb-2 text-lg font-semibold text-red-600 hover:text-red-800 hidden">Admin Panel</a>
-    </div>
+    </aside>
 
-    <!-- Main Content Area -->
-    <main class="ml-64 p-8">
+    <!-- Main Content -->
+    <main id="mainContent" class="flex-1 p-8">
       <h2 class="text-xl font-semibold text-gray-800">Welcome to your dashboard</h2>
       <p class="text-gray-600 mt-2">Here is your personalized content.</p>
     </main>
+  </div>
 
-    <script>
-      // Simulated login state
-      const isLoggedIn = localStorage.getItem("isLoggedIn");
-      const role = localStorage.getItem("role"); // either 'user' or 'admin'
+  <!-- Auth Check Script -->
+  <script>
+    const isLoggedIn = localStorage.getItem("isLoggedIn");
+    const role = localStorage.getItem("role"); // 'admin' or 'user'
 
-      if (isLoggedIn === "true") {
-        document.getElementById("dashboardMenu").classList.remove("hidden");
+    if (isLoggedIn === "true") {
+      // Show sidebar
+      document.getElementById("dashboardMenu").classList.remove("hidden");
 
-        // If admin, show admin link
-        if (role === "admin") {
-          document.getElementById("adminLink").classList.remove("hidden");
-        }
-      } else {
-        // Redirect to login if not logged in
-        window.location.href = "login.html";
+      // Show admin panel link if role is admin
+      if (role === "admin") {
+        document.getElementById("adminLink").classList.remove("hidden");
       }
+    } else {
+      // Not logged in → redirect to login
+      window.location.href = "login.html";
+    }
 
-      function logout() {
-        localStorage.removeItem("isLoggedIn");
-        localStorage.removeItem("role");
-        window.location.href = "login.html";
-      }
-    </script>
-  </body>
+    function logout() {
+      localStorage.removeItem("isLoggedIn");
+      localStorage.removeItem("role");
+      window.location.href = "login.html";
+    }
+  </script>
+</body>
 </html>
