--- a/login.html
+++ b/login.html
@@ -1,50 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login | Hashtag</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100 flex items-center justify-center h-screen">
-  <div class="bg-white p-8 rounded shadow-md w-full max-w-sm">
-    <h2 class="text-2xl font-bold mb-6 text-center">Login to Hashtag</h2>
-    <form id="loginForm" class="space-y-4">
-      <div>
-        <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-        <input type="email" id="email" class="mt-1 block w-full px-4 py-2 border rounded-md" required />
-      </div>
-      <div>
-        <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
-        <input type="password" id="password" class="mt-1 block w-full px-4 py-2 border rounded-md" required />
-      </div>
-      <div id="errorMsg" class="text-red-500 text-sm hidden">Invalid credentials</div>
-      <button type="submit" class="w-full bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700">
-        Login
-      </button>
-    </form>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login | Hashtag</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-gray-100 flex items-center justify-center h-screen">
+    <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-sm">
+      <h2 class="text-2xl font-bold mb-6 text-center">Hashtag Login</h2>
+      <form id="loginForm">
+        <div class="mb-4">
+          <label class="block mb-1 font-semibold">Email</label>
+          <input
+            type="email"
+            id="email"
+            class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400"
+            required
+          />
+        </div>
+        <div class="mb-4">
+          <label class="block mb-1 font-semibold">Password</label>
+          <input
+            type="password"
+            id="password"
+            class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400"
+            required
+          />
+        </div>
+        <div class="mb-4">
+          <label class="block mb-1 font-semibold">Select Role</label>
+          <select
+            id="role"
+            class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400"
+            required
+          >
+            <option value="user">User</option>
+            <option value="admin">Admin</option>
+          </select>
+        </div>
+        <button
+          type="submit"
+          class="w-full bg-blue-500 hover:bg-blue-600 text-white py-2 rounded-md font-semibold"
+        >
+          Login
+        </button>
+        <p id="errorMsg" class="text-red-500 text-sm mt-4 hidden text-center"></p>
+      </form>
+    </div>
 
-  <script>
-    document.getElementById("loginForm").addEventListener("submit", function(e) {
-      e.preventDefault();
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      const errorMsg = document.getElementById("errorMsg");
-
+    <script>
       const credentials = {
-        "admin@hashtag.com": { password: "admin123", role: "admin" },
-        "user@hashtag.com": { password: "user123", role: "user" }
+        admin: { email: "admin@hashtag.com", password: "admin123" },
+        user: { email: "user@hashtag.com", password: "user123" },
       };
 
-      if (credentials[email] && credentials[email].password === password) {
-        localStorage.setItem("loggedIn", "true");
-        localStorage.setItem("role", credentials[email].role);
-        window.location.href = "dashboard.html";
-      } else {
-        errorMsg.classList.remove("hidden");
-      }
-    });
-  </script>
-</body>
+      document.getElementById("loginForm").addEventListener("submit", function (e) {
+        e.preventDefault();
+
+        const email = document.getElementById("email").value.trim();
+        const password = document.getElementById("password").value;
+        const role = document.getElementById("role").value;
+        const errorMsg = document.getElementById("errorMsg");
+
+        if (
+          email === credentials[role].email &&
+          password === credentials[role].password
+        ) {
+          localStorage.setItem("isLoggedIn", "true");
+          localStorage.setItem("role", role);
+          window.location.href = "dashboard.html"; // Unified dashboard
+        } else {
+          errorMsg.textContent = "Invalid credentials. Please try again.";
+          errorMsg.classList.remove("hidden");
+        }
+      });
+    </script>
+  </body>
 </html>
